用户注册操作调整
