# docs/swagger.json
@@ -1,7 +1,15 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is cxy api docs.",
+        "title": "用户聊天系统",
+        "contact": {
+            "name": "go-swagger帮助文档"
+        },
+        "license": {
+            "name": "Apache 2.0"
+        },
+        "version": "1.0"
     },
     "paths": {
         "/index": {
@@ -18,7 +26,7 @@
         },
         "/user/create-user": {
             "get": {
-                "summary": "创建用户",
+                "summary": "注册用户",
                 "parameters": [
                     {
                         "maxLength": 100,
@@ -39,6 +47,13 @@
                         "type": "string",
                         "description": "密码",
                         "name": "passwordv2",
+                        "in": "query"
+                    },
+                    {
+                        "maxLength": 100,
+                        "type": "string",
+                        "description": "手机号",
+                        "name": "phone",
                         "in": "query"
                     }
                 ],
